fix(foldercard): removed bootstrap styling, shift into our own scss

--- a/src/styles/isomer-cms/pages/Content.module.scss
+++ b/src/styles/isomer-cms/pages/Content.module.scss
@@ -187,6 +187,9 @@
         line-height: 24px;
         overflow: hidden;
         text-overflow: ellipsis;
+        margin-left: 16px;
+        align-self: center;
+        margin-right: auto;
       }
 
       .componentDate {
@@ -244,6 +247,7 @@
       height: 100%;
       white-space: nowrap;
       text-overflow: ellipsis;
+
       i {
         vertical-align: middle;
         line-height: inherit;
